[package]
name = "gbfs-watcher"
version = "0.1.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
description = "API and logger for GBFS endpoints"
edition = "2021"

[dependencies]
axum = { version = "0.5.17", default-features = false, features = ["json", "http1", "http2", "tower-log", "query"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.0.23", features = ["derive"] }
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.87"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "fs", "sync", "io-util", "time", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", default-features = false, features = ["compression-full", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tempdir = "0.3.7"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
