[package]
name = "gbfs-watcher"
version = "1.0.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
edition = "2021"
description = "API and logger for GBFS endpoints, noticeably Velib' in Paris"
readme = "README.md"
homepage = "https://velib-history-api.dupre.io"
repository = "https://github.com/remi-dupre/gbfs-watcher"
license = "GPL-3.0"
keywords = ["api", "axum", "bike"]
categories = ["web-programming::http-server"]

[dependencies]
async-compression = { version = "0.3", features = ["gzip", "tokio"] }
axum = { version = "0.5", default-features = false, features = ["json", "headers", "http1", "http2", "query"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tempdir = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "fs", "sync", "io-util", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", default-features = false, features = ["fs", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.3", default-features = false, features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "local-time", "std", "tracing-log", "time"] }
geoutils = "0.5"

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = true
